--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
+    "react-native-really-awesome-button": "^1.6.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
