--- a/blackjack/package.json
+++ b/blackjack/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.2",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^17.0.2",
+    "react-native": "^0.64.0",
     "react-native-really-awesome-button": "^1.6.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
