--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
       <version>2.8.7</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>7.1.1</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.webjars/animate.css -->
     <dependency>
       <groupId>org.webjars</groupId>
