--- a/gui/package.json
+++ b/gui/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "firebase": "^8.3.2",
+    "firebase-functions": "^3.13.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
