--- a/gui/package.json
+++ b/gui/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
-    "firebase": "^8.3.2",
+    "firebase": "^8.4.1",
+    "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
