--- a/gui/package.json
+++ b/gui/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
+    "eslint": "^7.24.0",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "firebase-functions": "^3.13.2",
