--- a/gui/package.json
+++ b/gui/package.json
@@ -18,7 +18,9 @@
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^2.2.4",
     "react-moment": "^1.1.1",
+    "react-multi-carousel": "^2.6.2",
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
